--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
   --idx-header: 100;
   --idx-modal: 1000;
 
-  --trns-fast: 300ms ease;
+  --trns-fast: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   --trns-slow: 800ms ease-out;
 }
 
@@ -194,6 +194,8 @@ svg {
   color: var(--slate);
   padding: 24px 0;
   display: block;
+
+  transition: color var(--trns-fast);
 }
 
 .contacts:hover,
@@ -249,6 +251,8 @@ svg {
   cursor: pointer;
   min-width: 169px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+
+  transition: background-color var(--trns-fast);
 }
 
 .hero-button:hover,
@@ -391,6 +395,8 @@ svg {
   height: 40px;
   justify-content: center;
   align-items: center;
+
+  transition: background-color var(--trns-fast);
 }
 
 .team-card-socials-link:hover,
@@ -430,6 +436,8 @@ svg {
   border-radius: 4px;
   border: 1px solid var(--light-slate);
   padding: 16px 32px;
+
+  transition: color var(--trns-fast) border --trns-fast;
 }
 
 .customers-list-item:hover,
@@ -464,6 +472,9 @@ svg {
   border: 1px solid var(--cornflower);
   border-radius: 4px;
   padding: 12px 24px;
+
+  transition: color var(--trns-fast), background-color var(--trns-fast),
+    border var(--trns-fast);
 }
 
 .portfolio-filter-list-item:hover,
@@ -486,6 +497,7 @@ svg {
 
 .portfolio-card-link {
   display: block;
+  transition: transform var(--trns-fast);
 }
 
 .portfolio-card-link:hover .overlay-text,
@@ -597,6 +609,8 @@ svg {
   padding: 8px;
   width: 40px;
   height: 40px;
+
+  transition: background-color var(--trns-fast);
 }
 
 .footer-socials-list-item:hover,
@@ -665,6 +679,8 @@ svg {
   background-color: var(--iris);
   border-radius: 4px;
   border: transparent;
+
+  transition: background-color var(--trns-fast);
 }
 
 .subscribe-btn:hover,
@@ -733,6 +749,9 @@ svg {
   height: 24px;
   cursor: pointer;
   transition: color var(--trns-fast);
+
+  transition: color var(--trns-fast), background-color var(--trns-fast),
+    border var(--trns-fast);
 }
 
 .modal-btn:hover,
@@ -880,6 +899,8 @@ svg {
   background-color: var(--iris);
   border: transparent;
   border-radius: 4px;
+
+  transition: background-color var(--trns-fast);
 }
 
 .modal-button-send:hover,
