--- a/css/styles.css
+++ b/css/styles.css
@@ -634,6 +634,7 @@ svg {
 
 .subscribe-form {
   display: flex;
+  gap: 24px;
 }
 
 .subcribe-label {
@@ -896,7 +897,7 @@ svg {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-agreement-input:checked + .modal-checkbox {
+.modal-agreement-input:checked + .modal-agreement > .modal-checkbox {
   background-color: var(--ocean);
   border: none;
   fill: var(--cloud);
@@ -906,7 +907,10 @@ svg {
   opacity: 0;
 }
 
-.modal-agreement-input:checked + .modal-checkbox > .modal-checkbox-icon {
+.modal-agreement-input:checked
+  + .modal-agreement
+  > .modal-checkbox
+  > .modal-checkbox-icon {
   opacity: 1;
   fill: var(--cloud);
 }
@@ -919,12 +923,17 @@ svg {
   display: block;
   min-width: 169px;
   height: 56px;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: var(--white);
+
   background-color: var(--iris);
   border: none;
   border-radius: 4px;
